# futures-trader

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  monitor.yml
config/: economic_events.json
scripts/: deploy.sh  futures-trader.service  health_check.sh  setup-vps.sh  test_decision_cycle.py
src/: main.py  orchestrator.py
src/agents/: __init__.py  bull_bear_debate.py  llm_client.py  pre_market_analyst.py  reasoner.py  session_controller.py
src/core/: clock.py  config.py  events.py  exceptions.py  logging.py  types.py
src/data/: __init__.py  databento_client.py  economic_calendar.py  multi_instrument.py  price_action_analyzer.py  regime_classifier.py  schemas.py  setup_detector.py  state_engine.py  tick_processor.py
src/execution/: __init__.py  kill_switch.py  order_manager.py  position_tracker.py  quantlynk_client.py  quantlynk_order_manager.py  rate_limiter.py  risk_manager.py  tick_stop_monitor.py  tradovate_auth.py  tradovate_rest.py  tradovate_ws.py  trail_manager.py
src/guardrails/: __init__.py  apex_rules.py  circuit_breakers.py  guardrail_engine.py  position_limits.py  risk_checks.py  session_rules.py  trade_quality.py
src/indicators/: __init__.py  confluence.py  order_flow.py  structure_levels.py
src/intelligence/: pre_market_context.py
src/learning/: __init__.py  kelly_calculator.py  postmortem.py  regime_tracker.py  trade_logger.py
src/notifications/: __init__.py  alert_manager.py  formatters.py  telegram_client.py
src/replay/: __init__.py  data_recorder.py  decision_scorer.py  (+2 more)
tests/: conftest.py
(+80 files in other folders)
