[project]
name = "futures-trader"
version = "0.1.0"
description = "AI-powered MNQ futures trading system with multi-agent reasoning"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "orjson>=3.9.0",
    "databento>=0.73.0",
    "aiosqlite>=0.19.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
